# mimodex

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: desktop-ci.yml  pages.yml  provider-spike-ci.yml  runtime-ci.yml  windows-preview.yml  windows-release.yml
.trae/documents/: PRD.md  TechSpec.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: CURRENT_STATUS.md  ROADMAP_OPTIMIZATION.md
docs/architecture/: CODEX_RUNTIME_INVENTORY.md  README.md
docs/delivery/: WINDOWS_CI_RELEASE.md
docs/implementation/: CREDENTIAL_SETTINGS.md  DESKTOP_APP_SHELL_PLAN.md  DESKTOP_RUNTIME_CLIENT_PLAN.md  PROJECT_MANAGEMENT.md  RUNTIME_ADAPTER_PLAN.md  SQLITE_THREAD_LEDGER.md  TAURI_SIDECAR_PREVIEW.md  THREAD_INDEX_PERSISTENCE.md
docs/product/: PRD.md
docs/validation/: MIMO_PROVIDER_SPIKE.md  MIMO_PROVIDER_SPIKE_STATUS.md  WINDOWS_11_PRIVATE_BETA_ACCEPTANCE.md
runtime/: README.md  upstream.lock.json
runtime/patches/: 0001-add-chat-completions-wire-api.patch  0002-add-chat-completions-history-encoder.patch  0003-add-mimo-chat-completions-sse-parser.patch  0004-add-mimo-core-basic-model-flow.patch  0005-add-mimo-tool-loop-and-recovery.patch  0006-accept-null-mimo-sse-collections.patch  0007-use-mimo-identity-and-disable-thinking.patch  0008-stream-deltas-and-fast-simple-chat.patch  0009-configurable-mimo-base-url.patch  0010-fix-mimo-context-window-fallback.patch  README.md  series
runtime/scripts/: apply-patches.ps1
scripts/ci/: assert-size-budget.ps1  stage-runtime-sidecar.ps1  (+1 more)
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+80 files in other folders)
