[package]
name = "mimodex"
version = "0.1.0"
description = "MiMo 驱动的本地优先桌面编程 Agent"
authors = ["Mimodex contributors"]
edition = "2024"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
dunce = "1.0.5"
keyring-core = "1.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
windows-native-keyring-store = "1.1.0"
